--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,49 @@
-body {
+main {
     background-color: #7FFFD4;
+}
+
+#container-griglia {
+    width: 500px;
+    height: 500px;
+}
+
+#container-griglia .box {
+    min-height: 50px;
+    border: 1px solid black;
+    font-weight: 700;
+}
+
+#container-griglia .box:hover {
+    background-color: #69ddb7;
+}
+
+.box-selected {
+    color: white;
+    background-color: #6494EC;
+}
+
+.box-selected:hover {
+    color: white;
+    background-color:#4580f0!important;
+}
+
+.my-nav-color {
+    background-color: #E9E9ED;
+    border: 1px solid #b6b6b6;
+    font-weight: 600;
+}
+
+.form-select:focus {
+    border-color: #55c09c;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(174, 255, 228, .6);
+}
+
+.btn-primary{
+    color: black;
+}
+.btn-primary:active, .btn-primary:hover {
+    color: white;
+    background-color: #69ddb7;
+    border-color: #55c09c;
 }
