--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ main {
     min-height: 50px;
     border: 1px solid black;
     font-weight: 700;
+    cursor: pointer;
+    user-select: none;
 }
 
 #container-griglia .box:hover {
